[project]
name = "gusto"
version = "0.0.0"
description = "Multi-purpose file analysis tool."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
  { name = "Riley Purcell" }
]

dependencies = [
  "PyPDF2",
  "rich",
  "pdf2docx",
  "python-docx",
  "libmagic",
  "python-magic"
]

[project.scripts]
gusto = "gusto.__main__:main"

[tool.setuptools]
packages = ["gusto"]
